tests/suite/fail/generated/types/fail_add_bool_f64.ny
fn main() {
    let _ = true + 1.0 //~ ERROR type mismatch in `arithmetic` operation
}
